syntax = "proto3";

package notification.pb;
option go_package = "notification/api;pb";

message ProfileId {
  string profileId = 1;
}

message RegisterArnRequest {
  string deviceToken = 1;
  ProfileId profileId = 2;
  string deviceId = 3;
  string region = 4;
  string appId = 5;
  string deviceType = 6;
}

message DeleteArnRequest {
  enum DelType {
    EndPointArn = 0;
    TopicArn = 1;
  }
  DelType delType = 1;
  string publishId = 2;
  string deviceID = 3;
  string appId = 4;
}

message PublishMessageRequest {
  enum PubType {
    Specific = 0;
    Topic = 1;
  }
  PubType pubType = 1;
  bytes message = 2;
  string publishId = 3;
  string appId = 4;
}

message SubscribeTopicRequest {
  enum SubType {
    Internal = 0;
    External = 1;
  }
  SubType subType = 1;
  string topicName = 2;
  ProfileId profileId = 3;
  string appId = 4;
}

message NothingResponse {}

